# TenEngine

./: .gitignore  CLAUDE.md  CMakeLists.txt  README.md  sync-t0-to-engine.ps1
Engine/TenEngine-001-core/: CMakeLists.txt
Engine/TenEngine-001-core/cmake/: TenEngineHelpers.cmake  TenEngineModuleDependencies.cmake
Engine/TenEngine-001-core/src/: alloc.cpp  engine.cpp  log.cpp  platform.cpp  thread.cpp
Engine/TenEngine-002-object/: CMakeLists.txt  README.md
Engine/TenEngine-002-object/cmake/: TenEngineHelpers.cmake  TenEngineModuleDependencies.cmake
Engine/TenEngine-002-object/src/: BinarySerializer.cpp  CoreMemory.cpp  FrameGraph.cpp  Guid.cpp  JSONSerializer.cpp  LogicalCommandBuffer.cpp  Profiling.cpp  PropertyBag.cpp  Serializer.cpp  SerializerHelpers.cpp  TypeRegistry.cpp  VersionMigration.cpp  XMLSerializer.cpp  object_placeholder.cpp
Engine/TenEngine-003-application/: CMakeLists.txt
Engine/TenEngine-003-application/src/: Application.cpp  ApplicationImpl.h  EventQueue.cpp
Engine/TenEngine-004-scene/: CMakeLists.txt  README.md
Engine/TenEngine-004-scene/cmake/: TenEngineHelpers.cmake  TenEngineModuleDependencies.cmake
Engine/TenEngine-004-scene/src/: DynamicNodeManager.cpp  Octree.cpp  Quadtree.cpp  SceneManager.cpp  SceneWorld.cpp  SpatialQuery.cpp  StaticNodeManager.cpp
Engine/TenEngine-004-scene/tests/: CMakeLists.txt
Engine/TenEngine-005-entity/: CMakeLists.txt  README.md
Engine/TenEngine-005-entity/docs/: ComponentUsageGuide.md
Engine/TenEngine-005-entity/src/: Component.cpp  ComponentQuery.cpp  ComponentRegistration.cpp  ComponentRegistry.cpp  Entity.cpp  EntityManager.cpp  PropertyReflection.cpp  StubScene.cpp  System.cpp  Transform.cpp
Engine/TenEngine-005-entity/tests/: CMakeLists.txt
Engine/TenEngine-006-input/: CMakeLists.txt
Engine/TenEngine-006-input/src/: Abstraction.cpp  ActionId.cpp  AxisId.cpp  BindingTable.cpp  Gamepad.cpp  GamepadState.cpp  Input.cpp  InputBinding.cpp  InputBinding.h  InputState.h  KeyboardMouse.cpp  KeyboardState.cpp  LoadConfig.cpp  MapDevice.cpp  MouseState.cpp  Touch.cpp  TouchState.cpp
Engine/TenEngine-007-subsystems/: ABI_API_CONSISTENCY_REPORT.md  CMakeLists.txt
Engine/TenEngine-007-subsystems/src/: discovery.cpp  lifecycle.cpp  registry.cpp  registry_state.cpp
Engine/TenEngine-008-rhi/: CMakeLists.txt
Engine/TenEngine-009-render-core/: CMakeLists.txt
Engine/TenEngine-009-render-core/src/: PassProtocol.cpp  UniformBuffer.cpp  rendercore_stub.cpp
Engine/TenEngine-010-shader/: CMakeLists.txt
Engine/TenEngine-010-shader/cmake/: TenEngineModuleDependencies.cmake
Engine/TenEngine-010-shader/src/: ShaderCollection.cpp  ShaderModuleInit.cpp  ShaderResource.cpp
Engine/TenEngine-010-shader/tests/: test_cache.cpp  test_compile.cpp  test_hlsl_compile.cpp  test_msl_hlsl_source.cpp  test_reflection.cpp  test_vertex_input_reflection.cpp
Engine/TenEngine-011-material/: CMakeLists.txt
Engine/TenEngine-011-material/cmake/: TenEngineHelpers.cmake  TenEngineModuleDependencies.cmake
Engine/TenEngine-011-material/src/: MaterialModuleInit.cpp  MaterialResource.cpp  RenderMaterial.cpp  binding.cpp  factory.cpp  instancing.cpp  material_def.cpp  material_json.cpp  material_system_impl.hpp  parameters.cpp  storage_format.cpp
Engine/TenEngine-012-mesh/: CMakeLists.txt  build.ps1  build.sh
Engine/TenEngine-012-mesh/cmake/: TenEngineModuleDependencies.cmake
Engine/TenEngine-012-mesh/docs/: MESH_API_AND_DATAFLOW.md
Engine/TenEngine-012-mesh/src/: BuiltinMeshes.cpp  LogicalPipeline.cpp  Mesh.cpp  MeshAssetDesc.cpp  MeshDeserializer.cpp  MeshDevice.cpp  MeshFactory.cpp  MeshLoader.cpp  MeshModuleInit.cpp  MeshResource.cpp  MeshSerialize.cpp  math.cpp
Engine/TenEngine-012-mesh/tests/: CMakeLists.txt
Engine/TenEngine-013-resource/: CLEANUP_REPORT.md  CMakeLists.txt  DEPRECATED_FILES_REPORT.md
Engine/TenEngine-013-resource/cmake/: TenEngineModuleDependencies.cmake
Engine/TenEngine-013-resource/src/: Resource.cpp  ResourceId.cpp  ResourceManager.cpp  ResourceManifest.cpp  ResourceRepositoryConfig.cpp
Engine/TenEngine-013-resource/tests/: CMakeLists.txt
Engine/TenEngine-017-uicore/: CMakeLists.txt
Engine/TenEngine-017-uicore/src/: DrawList.cpp  Focus.cpp  HitTest.cpp  Layout.cpp
Engine/TenEngine-018-ui/: CMakeLists.txt
Engine/TenEngine-018-ui/src/: Canvas.cpp
Engine/TenEngine-019-pipeline-core/: CMakeLists.txt
Engine/TenEngine-019-pipeline-core/cmake/: TenEngineHelpers.cmake  TenEngineModuleDependencies.cmake
Engine/TenEngine-019-pipeline-core/src/: CollectPass.cpp  FrameGraph.cpp  LogicalCommandBuffer.cpp  LogicalPipeline.cpp  RenderItem.cpp  ResourceManager.cpp  SubmitContext.cpp
Engine/TenEngine-020-pipeline/: CMakeLists.txt  README.md  TODO.md
Engine/TenEngine-020-pipeline/cmake/: TenEngineHelpers.cmake  TenEngineModuleDependencies.cmake
Engine/TenEngine-020-pipeline/shaders/: post_process_bloom.hlsl  post_process_copy.hlsl  post_process_tonemap.hlsl
Engine/TenEngine-020-pipeline/src/: BuiltinMaterials.cpp  BuiltinMeshes.cpp  Culling.cpp  FrameGraphResources.cpp  LogicalCommandBufferExecutor.cpp  MaterialRuntime.cpp  PassBuilders.cpp  PipelineContext.cpp  PipelineImpl.cpp  PipelineScheduler.cpp  RenderPipeline.cpp  RenderableCollector.cpp  ThreadQueue.cpp
Engine/TenEngine-020-pipeline/tests/: CMakeLists.txt
Engine/TenEngine-024-editor/: CMakeLists.txt
Engine/TenEngine-024-editor/src/: Editor.cpp  (+31 more)
Engine/TenEngine-028-texture/: CMakeLists.txt
Engine/TenEngine-029-world/: CMakeLists.txt
Engine/TenEngine-030-device-resource-manager/: CMakeLists.txt
modules/object/: CMakeLists.txt  README.md
tests/: CMakeLists.txt  buffer_update_uniform_bind.cpp  command_list_submit.cpp  device_create.cpp  pso_create.cpp  resources_create.cpp  swapchain_create.cpp  sync_fence_semaphore.cpp  test_hot_reload.cpp  test_variants.cpp
tests/contract/: test_rhi_integration.cpp
tests/unit/: CMakeLists.txt  test_abi_contract.cpp  test_alloc.cpp  test_containers.cpp  test_mesh_api.cpp  test_platform.cpp  test_render_core.cpp  test_thread.cpp
tools/te-graph/: Cargo.toml  README.md
(+1046 files in other folders)
